--- a/css/style.css
+++ b/css/style.css
@@ -585,6 +585,8 @@ header li a {
 
 #menu-2 .item-1, .item-2, .item-3 {
   width: 100%;
+  height: 100%;
+  margin-bottom: 100px;
 }
 
 #menu-2 .flex {
@@ -670,10 +672,15 @@ header li a {
 
 footer .flex {
   flex-direction: column-reverse;
+  margin: 0 8%;
 }
 
 footer .footer-logo {
   margin: 0 auto;
+}
+
+footer .footer-content {
+  width: 100%;
 }
 
 footer .footer-text {
