--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,10 @@ span {
 }
 
 .con-img {
-  max-width: 350px;
-  max-height: 500px;
+  width: 100%;
+  max-width: 768px;
+  height: 100%;
+  max-height: 350px;
 }
 
 .en-title {
@@ -352,12 +354,12 @@ footer .copy {
 
 .wrapper {
   margin: 0 8%;
-  height: 320px;
+  height: 380px;
 }
 
 .flex {
   flex-direction: column;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
 }
 
@@ -367,6 +369,10 @@ footer .copy {
 
 .ja-title {
   font-size: 1.5rem;
+}
+
+.title {
+  text-align: center;
 }
 
 .left {
@@ -381,8 +387,7 @@ footer .copy {
 }
 
 .con-img {
-  width: 315px;
-  height: 236px;
+  max-height: 295px;
 }
 
 .con-img img {
@@ -456,7 +461,7 @@ header li a {
   right: 0;
   left: 0;
   margin:auto;
-  top: 120px;
+  top: 50%;
   z-index: 2;
 }
 
@@ -496,7 +501,7 @@ header li a {
 #room .text {
   width: 100%;
   position: absolute;
-  top: 150px;
+  top: 50%;
   right: 0;
   left: 0;
   margin: auto;
@@ -533,54 +538,66 @@ header li a {
 #baker .con-img {
   height: 400px;
   position: absolute;
-  top: 120px;
+  top: 30%;
   z-index: 1;
 }
 
 #baker .text {
   width: 100%;
   position: absolute;
-  top: 200px;
+  top: 50%;
   right: 0;
   left: 0;
   margin: auto;
   z-index: 2;
 }
 
+#baker .text p {
+  background-color: rgba(48,48,48,0.5);
+}
+
 /** menu-1 **/
 
 #menu-1 {
-  height: 450px;
+  max-width: 768px;
+  min-width: 375px;
+  width: 100%;
+  height: 500px;
+  margin-bottom: 100px;
 }
 
 #menu-1 .menu-img {
   width: 100%;
-  height: 50vw;
+  max-height: 350px;
+  height: 100%;
   position: absolute;
   top: 150px;
-  opacity: 100%;
 }
 
 #menu-1 h2 {
-  top: 0;
-  left: 80px;
+  position: static;
+  text-align: center;
 }
 
 #menu-1 .content-title .ja-title {
   font-size: 1.5rem;
+  opacity: 1;
 }
 
 #menu-1 p {
-  width: 90%;
-  top: 370px;
-  left: 25px;
+  width: auto;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
 }
 
 /** menu-2 **/
 
 #menu-2 {
-  height: 1700px;
-  margin-bottom: 200px;
+  height: 3131px;
+  margin-bottom: 100px;
 }
 
 #menu-2 .item-1, .item-2, .item-3 {
@@ -590,7 +607,9 @@ header li a {
 }
 
 #menu-2 .flex {
-  margin-bottom: 100px;
+  max-height: 3049px;
+  height: 100%;
+  margin-bottom: 50px;
 }
 
 #menu-2 .more {
@@ -602,11 +621,17 @@ header li a {
 /** original **/
 
 #original {
-  height: 500px;
+  height: 640px;
+  margin-bottom: 100px;
 }
 
 #original .flex {
   position: relative;
+}
+
+#original .left {
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 #original img {
@@ -614,9 +639,12 @@ header li a {
 }
 
 #original .con-img {
-  position: absolute;
-  top: 50px;
+  max-height: 420px;
+  height: 100%;
+}
 
+#original picture {
+  height: 100%;
 }
 
 #original .ja-title br {
@@ -626,27 +654,32 @@ header li a {
 #original .title {
   position: absolute;
   top: 0;
-  left: 4%;
-}
-
-#original .text {
-  position: absolute;
-  top: 330px;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  margin-bottom: 0;
 }
 
 /** message **/
 
 #message {
   height: 800px;
+  margin-bottom: 100px;
 }
 
 #message .left {
   height: 65%;
 }
 
+#message .con-img {
+  max-height: 500px;
+}
+
 #message img {
-  height: 400px;
+  height: 100%;
   opacity: 100%;
+  object-fit: contain;
 }
 
 #message .text p:last-child {
@@ -657,7 +690,7 @@ header li a {
 
 #info {
   height: 860px;
-  margin-bottom: 70px;
+  margin-bottom:100px;
 }
 
 #info .magazine, .tv {
@@ -668,19 +701,26 @@ header li a {
   text-align: center;
 }
 
+#info .left {
+  height: 30%;
+}
+
 /** footer **/
 
 footer .flex {
   flex-direction: column-reverse;
-  margin: 0 8%;
+  margin: 0;
 }
 
 footer .footer-logo {
   margin: 0 auto;
+  margin-bottom: 100px;
 }
 
 footer .footer-content {
   width: 100%;
+  margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 footer .footer-text {
