--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,18 @@ header li a {
   border-bottom: solid 2px #ffffff;
 }
 
+/** original **/
+
+#original picture {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+#original picture img {
+  object-fit: contain;
+}
+
 /** message **/
 #message .title .name {
   font-size: 1rem;
